assets/css/styles.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap:100,200,300,400,500,600,700');

/*----------------------------------Main body*/

body {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
    font-size: 20px;
    background: black;
    color: #a9a9a9;

}

h1,
h2,
h3,
h4 {
    margin: 0;
   
}

/*----------------------------------General Styling*/

.uppercase {
    text-transform: uppercase;
}

.general-sub {
        color: #ff0000;
}

.inline-block {
    display: inline-block;
}

.page-header{
    border-bottom: none;
   
}

.section-heading {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
    margin-top: 25px;
    margin-bottom: 40px;
}

.container-fluid {
    padding-right: 0;
    padding-left: 0;
    margin-right: 0;
    margin-left: 0;
}

.margin {
    margin-left: 20px;
}

.space {
    padding-bottom: 25px;
    margin-right: 0px;

}


/*--------------
--------------------Header*/

header {
    margin: 0;
    padding: 0;
}

.band {
    background: url("/assets/images/monkees.jpg");
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    height: 400px;
    padding-left: 0;
    padding-right: 0;
    margin-right: 0;
}

img {
    Margin: 0;
    padding-left: 0;
    padding-right: 0;
}


/*----------------------------------Footer*/

#footer {
        min-height: 120px;
    max-height: 120px;
    font-size: 15px;
    position: relative;
    text-align: center;
}

.social-links {
    padding-bottom: 15px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 20px;
    line-height: 8px;
    text-align: center;
    color: #fafafa;
    background: #ff0000;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
    
}

.social-links li a i:hover {
    background: #fa9e00;
}

.page-header h1 {
    font-size: 50px;
}

#footer-details {
    margin-top: 20px;
    text-align: center;

}



/*----------------------------------Contact*/

.contact-heading {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
    margin-top: 25px;
    margin-bottom: 20px;
    text-align: center;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    background-color: #e84610;
    color: #fafafa;
}
/*----------------------------------iframe responsive*/
.responsive{
    width: 100%;
    position: relative;
    margin-bottom: 30px;
   
    
}

.responsive::before{
content: '';
display: block;
padding-top:56.25%;
}

.responsive iframe {
border: none;
width:100%;
height:100%;
position:absolute;
top:0;
left: 0;
}

.center {
    text-align: center;
}





/*----------------------------------Media Queries*/

@media (max-width:600px) {
    .imggone {
        display: none;
    }
    .imgbig {
        width: 100% !important;
    }
}

@media screen and (max-width: 750px) {
    .nav-tabs>li {
        display: block;
        width: 100%;
    }
}

